//  File: acl_guard.proto
//  Author: Kevin Walsh <kwalsh@holycross.edu>
//
//  Description: Protocol buffers for ACLs.
//
//  Copyright (c) 2014, Kevin Walsh.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package tao;

// One entry of an ACL, conveying that name is authorized to perform op(args).
message ACLEntry {
	required string name = 1;
	required string op = 2;
	repeated string args = 3;
}

// A set of ACL entries.
message ACLSet { repeated ACLEntry entries = 1; }

// A set of ACL entries signed by a key.
message SignedACLSet {
  required bytes serialized_aclset = 1;
  required bytes signature = 2;
}
